--- a/config/database.yml
+++ b/config/database.yml
@@ -3,8 +3,8 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   encoding: unicode
   host: localhost
-  username: dev
-  password: progshowzim
+  username: <%= ENV.fetch("POSTGRES_USERNAME") { 'dev' } %>
+  password: <%= ENV.fetch("POSTGRES_PASSWORD") { 'progshowzim' } %>
 
 development:
   <<: *default
