--- a/config/database.yml
+++ b/config/database.yml
@@ -1,17 +1,24 @@
-default: &default
+ddefault: &default
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   url: <%= ENV["DATABASE_URL"] %>
+  encoding: unicode
+  host: localhost
+  username: postgres
+  password: ric198810
 
 development:
   <<: *default
+  database: ecommerce_development
 
 test:
   <<: *default
 
 homolog:
   <<: *default
+  database: ecommerce_test
 
 production:
   <<: *default
+  database: ecommerce_production
